; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/loopback/extr_tcm_loop.c_tcm_loop_change_queue_depth.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/loopback/extr_tcm_loop.c_tcm_loop_change_queue_depth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_device = type { i32 }

@EOPNOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_device*, i32, i32)* @tcm_loop_change_queue_depth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcm_loop_change_queue_depth(%struct.scsi_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.scsi_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.scsi_device* %0, %struct.scsi_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %25 [
    i32 130, label %9
    i32 129, label %15
    i32 128, label %19
  ]

9:                                                ; preds = %3
  %10 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %11 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %12 = call i32 @scsi_get_tag_type(%struct.scsi_device* %11)
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @scsi_adjust_queue_depth(%struct.scsi_device* %10, i32 %12, i32 %13)
  br label %28

15:                                               ; preds = %3
  %16 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @scsi_track_queue_full(%struct.scsi_device* %16, i32 %17)
  br label %28

19:                                               ; preds = %3
  %20 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %21 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %22 = call i32 @scsi_get_tag_type(%struct.scsi_device* %21)
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @scsi_adjust_queue_depth(%struct.scsi_device* %20, i32 %22, i32 %23)
  br label %28

25:                                               ; preds = %3
  %26 = load i32, i32* @EOPNOTSUPP, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %4, align 4
  br label %32

28:                                               ; preds = %19, %15, %9
  %29 = load %struct.scsi_device*, %struct.scsi_device** %5, align 8
  %30 = getelementptr inbounds %struct.scsi_device, %struct.scsi_device* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %28, %25
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i32 @scsi_adjust_queue_depth(%struct.scsi_device*, i32, i32) #1

declare dso_local i32 @scsi_get_tag_type(%struct.scsi_device*) #1

declare dso_local i32 @scsi_track_queue_full(%struct.scsi_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
